DATE       AUTHOR       CHANGE
---------- --------     --------------------------------------------------------
2002-12-22 nonchocoboy  Added PointNi and VecNi convenience typedefs.
2002-11-26 subatomic    Added VecBase reflect(...) function.
2002-11-26 nonchocoboy  Added ability to make a AABox from a Sphere.
2002-11-26 nonchocoboy  Added AABox-Sphere intersection test.
2002-11-26 nonchocoboy  Added Sphere-Sphere sweep test.
2002-11-25 nonchocoboy  Added a quadratic formula solver to the Math lib.
2002-11-02 nonchocoboy  Compile fix for Containment.h - missing <vector> include
2002-11-01 nonchocoboy  Added sweep test for AABox.
                        NEW VERSION: 0.1.12
2002-10-28 nonchocoboy  set(AxisAngle, Quat) now guarantees that the AxisAngle
                        has a normalized axis.
                        NEW VERSION: 0.1.11
2002-10-17 nonchocoboy  Compiler fix for LineSeg::getLength().
                        NEW VERSION: 0.1.10
2002-10-11 nonchocoboy  Added output function for AABox.
2002-09-20 nonchocoboy  NEW VERSION: 0.1.9
2002-09-15 subatomic    added Math::clamp
2002-09-11 allenb       CoordQuat fixed so that it can be instantiated.
2002-08-06 subatomic    added intersection test between point3 and AAbox
                        NEW VERSION: 0.1.8
2002-07-28 nonchocoboy  Added basic intersection test for AABoxes.
                        NEW VERSION: 0.1.7
2002-07-11 allenb       Added static assert.  Added muli-arg constructor for
                        Coord.  Created Util directory.  Added new coord types.
                        NEW VERSION: 0.1.6
2002-07-04 allenb       Bump up version since it all seems to work well now.
                        NEW VERSION: 0.1.0
2002-06-23 subatomic    For safety, don't allow Quat(T,T,T,T) default 
                        constructor.  Added Quat(), and changed Quat(T,T,T,T)
                        which to not use defaults.
2002-06-13 subatomic    For safety, don't allow VecBase(DATA_TYPE) constructor.